<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ce3030">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombrep"
    />
    <EditText
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inNombre"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Correop"
         />
    <EditText
        android:id="@+id/textCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inCorreo"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Passwordp"
        />
    <EditText
        android:id="@+id/textPasswordp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inPassword"
        />
    <Button
        android:id="@+id/btnDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDireccion"
        />





</LinearLayout>
