<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main2_activity_ventana"
    tools:context="com.trejo.root.registrousuardirecciones.Main2ActivityVentana"
    android:orientation="vertical"
    android:background="#ce3030">
    <TextView
        android:id="@+id/labelnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Callep"
        />
    <EditText
        android:id="@+id/textCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inCalle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Coloniap"
        />
    <EditText
        android:id="@+id/textColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inColoniap"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cp"
        />
    <EditText
        android:id="@+id/textCp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inCp"
        />
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        />
    <TextView
        android:id="@+id/textRegistrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEstado"
        />

</LinearLayout>
